public/assets/css/consumer/consumerStyle.css
/*                     TO DO                     */
/*              GLOBAL HTML ELEMENTS             */
/*           APPLIED ON MULTIPLE PARTS           */
.grocery-list-container, .grocery-list-options, form div {
    border: none;
    padding: 0;
    background-color: initial;
}

.list-item{
    width: max-content;
    border: var(--accent-color) solid 2px ;
    border-radius: 10px;
    padding: 1vw;
    background-color: var(--bg-color);
}

.list-item h2{
    font-weight: bold;
    margin-bottom: 1em;
}

.list-item p{
    margin-bottom: 5px;
}

.list-item span{
    text-decoration: underline;
}
/*               LIST LANDING PAGE               */
main .grocery-lists{
    background-color: var(--bg-color);
    border: var(--secondary-color) solid 2px ;
    border-radius: 10px;
    padding: 1vw;
    margin-bottom: 1vw;
}

main .grocery-lists h1{
    font-weight: bold;
    margin-bottom: 1em;
}

main .grocery-list-container {
    display: grid;
    grid-template-columns: 1fr 1fr;
    grid-template-rows: 1fr 1fr 1fr;
    grid-template-areas: ". ." ". ." ". .";
    grid-row-gap: 2em;
    grid-column-gap: 2em;
    margin-left: 1em;
    margin-right: 1em;
    margin-bottom: 2em;
}

.grocery-list-options{
    display: flex;
    justify-content: space-around;
}

.grocery-list-options a{
    border: var(--accent-color) solid 2px;
    padding: 1vmax;
    border-radius: 10px;
}

.grocery-list-options span{
    color: black;
}
span[class^="fas"]{
    text-decoration: none;
}

span[class="fas fa-arrow-right"]{
    margin-right: 0;
    margin-left: 1vmax;
}

#grocery-lists{
    display: flex;
    flex-flow: row wrap;
    align-content: center;
    justify-content: space-around;
}

/*                ALTER LIST PAGE                */
#list-top-bar{
    display: flex;
    justify-content: space-around;
    margin-bottom: 1em;
}

#list-main{
    display: grid;
    grid-template-columns: 1fr 5fr;
    flex-flow: row nowrap;
    grid-column-gap: 2em;
    margin-bottom: 2em;
}

#list-main h1{
    font-weight: bold;
    font-size: 1.2rem;
    margin-bottom: 0.5em;
}

#list-main .new-items-container, #list-main .list-items-container{
    display: flex;
    flex-flow: column wrap;
    justify-content: space-between;
    background-color: var(--bg-color);
    border-radius: 10px;
    border: 2px black solid;
}

#list-bottom-bar{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-around;
}

#list-bottom-bar section{
    display: flex;
    flex-flow: column wrap;
    margin: 2em;
}

#list-bottom-bar section h3, #list-bottom-bar section label{
    margin-bottom: 0.5em;
}

#list-bottom-bar section:last-of-type{
    display: flex;
    flex-flow: column wrap;
    justify-content: space-around;
}

.list-item{
    margin: 1em;
    cursor: move;
}

#new-item-form{
    position: fixed;
    z-index: 1;
    width: calc(50% - 1rem);
    height: calc(50% - 1rem);
    background-color: var(--bg-color);
    border-radius: 10px;
    border: 2px solid var(--accent-color);
    display: flex;
    flex-flow: column nowrap;
    top: 25%;
    left: 25%;
    padding: 1rem;
}

#new-item-form div{
    display: flex;
    flex-flow: row nowrap;
    justify-content: space-between;
    margin-bottom: 1em;
}

#new-item-form div a{
    font-size: 2rem;
    color: black;
}

#new-item-form div a:hover{
    color: var(--secondary-color);
}

#new-item-form div h3{
    font-weight: bold;
    font-size: 1.5rem;
}

#new-item-form label{
    display: block;
    margin-bottom: 0.5rem;
}

#new-item-form input, select{
    display: block;
    margin-bottom: 0.5rem;
}

#new-item-form input[type="submit"]{
    border-color: black;
}

.new-items-container{
    min-height: 3rem;
}
/*                    PROFILE                    */
.profile{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
}

.profile h1{
    font-size: 2rem;
    font-weight: bold;
    margin-bottom: 2rem;
}

.profile article{
    width: 50%;
}

.profile-card{
    display: flex;
    flex-flow: row wrap;
    justify-content: space-between;
    margin-bottom: 1em;
}

.profile-card figcaption{
    font-size: 1.5em;
}

.profile-card image{
    height: 3vmax;
    width: 3vmax;
}

.profile-card section h2{
    margin-bottom: 1em;
    font-weight: bold;
}

.profile-card section h2 span, .profile-card section h2 time{
    font-weight: normal;
    margin-left: 0.5em;
}

.profile-order{
    display: flex;
    flex-flow: row wrap;
    padding: 1em;
    margin-bottom: 1em;
    align-content: center;
    border: var(--accent-color) solid 2px;
    width: max-content;
    border-radius: 10px;
    background-color: var(--bg-color);
}

.profile-order span, .profile-card h3{
    margin-right: 1em;
}

.profile-order span{
    font-size: 3em;
}

/*                   ANIMATIONS                  */

